k8s/statefulsets.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: app
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-headless
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysqldb
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysqldb
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs-storage
        resources:
          requests:
            storage: 1Gi
